--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
 <ion-tab [root]= "tab2Root" tabTitle ="Game" tabIcon ="game-controller-b"></ion-tab>
+<ion-tab [root]= "tab3Root" tabTitle ="Dictionary" tabIcon ="book"></ion-tab>
 </ion-tabs>
